--- a/uses-links.yml
+++ b/uses-links.yml
@@ -38,6 +38,7 @@ iconoir: https://iconoir.com
 jest: https://jestjs.io
 js-yaml: https://github.com/nodeca/js-yaml
 jsdoc: https://jsdoc.app
+jsdom: https://github.com/jsdom/jsdom
 json5: https://github.com/json5/json5
 liveblocks: https://liveblocks.io
 lodash: https://lodash.com
