fix broken links reported by CI run
https://github.com/janosh/awesome-sveltekit/actions/runs/3365777794/jobs/5581590256

--- a/site/src/sites.yml
+++ b/site/src/sites.yml
@@ -1162,7 +1162,7 @@
 - title: inlang dashboard
   url: https://inlang.dev
   repo: https://github.com/inlang/inlang
-  site_src: https://github.com/inlang/inlang/tree/main/apps/dashboard
+  site_src: https://github.com/inlang/inlang/tree/main/source-code/website
   description: Translate software products 2x faster.
   uses:
     - TypeScript
@@ -1869,7 +1869,7 @@
 - title: Cryptgeon
   url: https://cryptgeon.nicco.io
   repo: https://github.com/cupcakearmy/cryptgeon
-  site_src: https://github.com/cupcakearmy/cryptgeon/tree/main/frontend
+  site_src: https://github.com/cupcakearmy/cryptgeon/tree/main/packages/frontend
   description: >-
     A secure, open source notes and file sharing service inspired by PrivNote
     written in Rust &amp; Svelte.
@@ -1897,7 +1897,7 @@
       location: Germany
       company: '@lovoo'
 - title: Svelte Intl Precompile
-  url: https://svelte-intl-precompile.com
+  url: https://svelte-intl-precompile.com/en/docs/configuration
   repo: https://github.com/cibernox/svelte-intl-precompile
   description: >-
     I18n library for Svelte that analyzes your keys at build time for maximum
