--- a/uses-links.yml
+++ b/uses-links.yml
@@ -22,7 +22,7 @@ elder.js: https://github.com/Elderjs/elderjs
 electron: https://electronjs.org
 filepond: https://pqina.nl/filepond
 firebase: https://firebase.google.com
-github api: https://docs.github.com/en/rest
+github api: https://docs.github.com/rest
 github pages: https://pages.github.com
 gitpod: https://gitpod.io
 google analytics: https://analytics.google.com
