--- a/uses-links.yml
+++ b/uses-links.yml
@@ -22,6 +22,7 @@ elder.js: https://github.com/Elderjs/elderjs
 electron: https://electronjs.org
 filepond: https://pqina.nl/filepond
 firebase: https://firebase.google.com
+flamethrower: https://github.com/fireship-io/flamethrower
 github api: https://docs.github.com/rest
 github pages: https://pages.github.com
 gitpod: https://gitpod.io
@@ -31,6 +32,7 @@ graphcms: https://graphcms.com
 graphql: https://graphql.org
 gsap: https://greensock.com/gsap
 highlight.js: https://highlightjs.org
+hugo: https://gohugo.io
 husky: https://github.com/typicode/husky
 ibm carbon: https://carbondesignsystem.com
 iconify: https://iconify.design
