--- a/uses-links.yml
+++ b/uses-links.yml
@@ -7,6 +7,7 @@ chart.js: https://chartjs.org
 cloudflare: https://cloudflare.com
 cloudinary: https://cloudinary.com
 codemirror: https://codemirror.net
+commitlint: https://github.com/conventional-changelog/commitlint
 contentful: https://contentful.com
 cssnano: https://cssnano.co
 cypress: https://cypress.io
