mv utils into .github
classify http status 429 as alive in link-check
mv {uses-link->tools}.yml

--- a/.github/workflows/link-check.yml
+++ b/.github/workflows/link-check.yml
@@ -18,4 +18,4 @@ jobs:
         # docs at https://git.io/JBaKu
         with:
           # sets status code 500 (Internal Server Error) and 503 (Service Unavailable) as alive
-          config-file: utils/markdown_link_check_config.json
+          config-file: .github/workflows/link-check-config.json
