--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,7 +19,7 @@ repos:
       - id: mixed-line-ending
       - id: trailing-whitespace
       - id: file-contents-sorter
-        files: ^uses-links\.yml$
+        files: ^links\.yml$
 
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v3.0.0-alpha.0
@@ -35,7 +35,7 @@ repos:
     rev: v1.28.0
     hooks:
       - id: yamllint
-        args: [--config-file, utils/.yamllint.yml]
+        args: [--config-file, .github/yamllint.yml]
 
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.32.2
@@ -97,6 +97,6 @@ repos:
 
       - id: format-urls
         name: Format URLs
-        entry: utils/format_urls.py
+        entry: .github/format_urls.py
         language: python
-        files: ^(sites.yml|readme.md|utils/format_urls.py)$
+        files: ^(sites.yml|readme.md|.github/format_urls.py)$
