link to repo subpages (/network, /contributors, etc.) from SiteDetails.svelte

--- a/site/src/sites.yml
+++ b/site/src/sites.yml
@@ -2297,8 +2297,10 @@
     - rehype
     - jsdom
     - GitHub Pages
+    - mdsvexamples
   tags:
     - forms
+    - interactive
     - open source
     - select component
   date_created: 2021-05-07T00:00:00.000Z
