--- a/tools.yml
+++ b/tools.yml
@@ -48,6 +48,7 @@ lodash: https://lodash.com
 mapbox: https://mapbox.com
 markedjs: https://marked.js.org
 mdsvex: https://github.com/pngwn/MDsveX
+mdsvexamples: https://github.com/mattjennings/mdsvexamples
 mocha: https://mochajs.org
 monaco: https://microsoft.github.io/monaco-editor
 motion one: https://motion.dev
