--- a/site/package.json
+++ b/site/package.json
@@ -12,34 +12,34 @@
     "dev": "node scripts/index.js && vite dev",
     "build": "node scripts/index.js && vite build",
     "preview": "vite preview",
-    "serve": "pnpm build && pnpm preview",
+    "serve": "vite build && vite preview",
     "check": "svelte-check"
   },
   "devDependencies": {
-    "@iconify/svelte": "^3.0.0",
+    "@iconify/svelte": "^3.0.1",
     "@rollup/plugin-yaml": "^4.0.1",
-    "@sveltejs/adapter-static": "1.0.0-next.48",
-    "@sveltejs/kit": "1.0.0-next.553",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.43.0",
+    "@sveltejs/adapter-static": "1.0.0-next.49",
+    "@sveltejs/kit": "1.0.0-next.579",
+    "@typescript-eslint/eslint-plugin": "^5.46.0",
+    "@typescript-eslint/parser": "^5.46.0",
     "dotenv": "^16.0.3",
-    "eslint": "^8.28.0",
+    "eslint": "^8.29.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "imagemin": "^8.0.1",
     "imagemin-webp": "^7.0.0",
     "js-yaml": "^4.1.0",
-    "marked": "^4.2.2",
-    "prettier": "^2.7.1",
-    "prettier-plugin-svelte": "^2.8.1",
-    "puppeteer": "^19.2.2",
-    "svelte": "^3.53.1",
-    "svelte-check": "^2.9.2",
+    "marked": "^4.2.4",
+    "prettier": "^2.8.1",
+    "prettier-plugin-svelte": "^2.9.0",
+    "puppeteer": "^19.4.0",
+    "svelte": "^3.54.0",
+    "svelte-check": "^2.10.2",
     "svelte-github-corner": "^0.1.0",
-    "svelte-multiselect": "^8.1.0",
+    "svelte-multiselect": "^8.2.0",
     "svelte-preprocess": "^4.10.7",
-    "svelte2tsx": "^0.5.20",
-    "typescript": "^4.9.3",
-    "vite": "^3.2.4"
+    "svelte2tsx": "^0.5.22",
+    "typescript": "^4.9.4",
+    "vite": "^4.0.0"
   },
   "keywords": [
     "sveltekit",
