--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -20,23 +20,18 @@ jobs:
       - name: Check out repo
         uses: actions/checkout@v3
 
-      - name: Set up pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: latest
-
       - name: Set up node
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: pnpm
-          cache-dependency-path: site/pnpm-lock.yaml
+          cache: npm
+          cache-dependency-path: site/package.json
 
       - name: Install dependencies
-        run: cd site && pnpm install
+        run: cd site && npm install
 
       - name: Build site
-        run: cd site && pnpm build
+        run: cd site && npm run build
 
       - name: Upload build artifact
         uses: actions/upload-pages-artifact@v1
