--- a/site/package.json
+++ b/site/package.json
@@ -18,10 +18,10 @@
   "devDependencies": {
     "@iconify/svelte": "^3.0.1",
     "@rollup/plugin-yaml": "^4.0.1",
-    "@sveltejs/adapter-static": "1.0.0",
-    "@sveltejs/kit": "1.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.48.0",
-    "@typescript-eslint/parser": "^5.48.0",
+    "@sveltejs/adapter-static": "1.0.1",
+    "@sveltejs/kit": "1.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
     "dotenv": "^16.0.3",
     "eslint": "^8.31.0",
     "eslint-plugin-svelte3": "^4.0.0",
@@ -29,14 +29,14 @@
     "imagemin-webp": "^7.0.0",
     "js-yaml": "^4.1.0",
     "marked": "^4.2.5",
-    "prettier": "^2.8.1",
+    "prettier": "^2.8.2",
     "prettier-plugin-svelte": "^2.9.0",
-    "puppeteer": "^19.4.1",
-    "svelte": "^3.55.0",
-    "svelte-check": "^3.0.1",
-    "svelte-github-corner": "^0.2.0",
-    "svelte-multiselect": "^8.2.3",
+    "puppeteer": "^19.5.1",
+    "svelte": "^3.55.1",
+    "svelte-check": "^3.0.2",
+    "svelte-multiselect": "^8.2.4",
     "svelte-preprocess": "^5.0.0",
+    "svelte-zoo": "^0.2.0",
     "svelte2tsx": "^0.6.0",
     "typescript": "^4.9.4",
     "vite": "^4.0.4"
