--- a/tools.yml
+++ b/tools.yml
@@ -87,6 +87,7 @@ swell commerce: https://swell.is
 tailwind: https://tailwindcss.com
 testing library: https://testing-library.com
 three.js: https://threejs.org
+turbo: https://github.com/vercel/turbo
 typescript: https://typescriptlang.org
 underscore: https://underscorejs.org
 unocss: https://github.com/unocss/unocss
