--- a/site/package.json
+++ b/site/package.json
@@ -13,15 +13,17 @@
     "build": "node scripts/index.js && vite build",
     "preview": "vite preview",
     "serve": "node scripts/index.js && vite build && vite preview",
-    "check": "svelte-check"
+    "check": "svelte-check",
+    "test": "playwright test tests/*.test.ts"
   },
   "devDependencies": {
-    "@iconify/svelte": "^3.0.1",
+    "@iconify/svelte": "^3.1.0",
+    "@playwright/test": "^1.30.0",
     "@rollup/plugin-yaml": "^4.0.1",
     "@sveltejs/adapter-static": "^1.0.5",
-    "@sveltejs/kit": "^1.2.2",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
+    "@sveltejs/kit": "^1.3.2",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.32.0",
     "eslint-plugin-svelte3": "^4.0.0",
@@ -31,10 +33,10 @@
     "marked": "^4.2.12",
     "prettier": "^2.8.3",
     "prettier-plugin-svelte": "^2.9.0",
-    "puppeteer": "^19.5.2",
+    "puppeteer": "^19.6.2",
     "svelte": "^3.55.1",
-    "svelte-check": "^3.0.2",
-    "svelte-multiselect": "^8.2.4",
+    "svelte-check": "^3.0.3",
+    "svelte-multiselect": "^8.3.0",
     "svelte-preprocess": "^5.0.1",
     "svelte-zoo": "^0.2.3",
     "svelte2tsx": "^0.6.0",
